[project]
name = "multi-agent-system-using-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "toolbox-langchain>=0.5.3",
]
